plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.144'
    id 'me.modmuss50.mod-publish-plugin' version '2.2.0'
}

version = mod_version
group = mod_group_id

repositories {
    maven {
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
}

base {
    archivesName = mod_id
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
    withSourcesJar()
}

neoForge {
    version = project.neo_version

    runs {
        client {
            client()
        }

        server {
            server()
            programArgument '--nogui'
        }

        gameTestServer {
            type = "gameTestServer"
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty('forge.logging.markers', 'REGISTRIES')
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
            logLevel = org.slf4j.event.Level.DEBUG
            additionalRuntimeClasspathConfiguration.extendsFrom(project.configurations.implementation)
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

String http = "io.netty:netty-codec-http:${netty_codec_http_version}"
String zstd = "com.github.luben:zstd-jni:${zstd_jni_version}"

String jei = "mezz.jei:jei-${minecraft_version}-neoforge:19.25.0.325"

dependencies {
    implementation(http)
    jarJar(http)

    implementation(zstd)
    jarJar(zstd)

    runtimeOnly(jei)
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    String computedNeoVersionRange = "[${neo_version},)"

    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             neo_version_range      : computedNeoVersionRange,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources { srcDir 'src/generated/resources' }
sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

processResources {
    exclude '**/*.py'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

publishMods {
    file = jar.archiveFile
    additionalFiles.from(sourcesJar.archiveFile)
    changelog = "Release v${mod_version}"
    type = ALPHA
    modLoaders.add("neoforge")

    modrinth {
        accessToken = providers.environmentVariable("MODRINTH_TOKEN")
        projectId = "RQjlpUyI"
        minecraftVersions.add(minecraft_version)
    }

    curseforge {
        accessToken = providers.environmentVariable("CURSEFORGE_TOKEN")
        projectId = "1377875"
        minecraftVersions.add(minecraft_version)
        server = true
        client = false
    }
}